poster byte array